* Changelog
I hope the current card / log format is flexible enough to accommodate
upcoming changes.

In case a update to the org sources is needed, I'll add a changelog
entry with updating instructions.

** [2020-11-11 Wed]
The dashboard now includes a forecast of how many cards will be due
during the next day, week (+7 days) or month (+30 days).
** [2020-09-09 Wed]
Org-fc now supports nested flashcards.

*** Changed
- It's now possible to mark child headings of flashcards as a flashcards
- When flipping a card, child headings (except the "Back" heading)
  remain collapsed
- Subheadings are ignored when searching for holes of cloze cards
** [2020-07-16 Thu]
*** Changed
- Suspending a card during review now removes all other positions of
  it from the current session, to avoid reviewing suspended cards
** [2020-07-08 Wed]
*** Changed
The awk index now also includes the headline text of each card.

This will be useful for building a ~tabulated-list-mode~ based card
overview.
** [2020-07-06 Mon]
*** Added
- ~org-fc-suspend-tree~ for suspending all cards in a subtree
*** Changed
- unsuspending overdue cards doesn't reset their review data anymore
** [2020-07-04 Sat]
*** Added
- ~org-fc-review-edit~ (bound to ~p~) pauses the review for editing
  the current card. A new mode ~org-fc-review-edit-mode~ adds
  keybindings for resuming & quitting the review.
** [2020-07-03 Fri]
*** Changed
- By default, failed cards are appended to the end of the review session.
  This can be configured via ~org-fc-append-failed-cards~
- ~org-fc-map-cards~ takes an optional ~scope~ argument,
  similar to ~org-map-entries~.
*** Added
- ~org-fc-unsuspend-tree~ unsuspends all cards in the subtree at point
** [2020-07-02 Thu]
*** Changed
- ~org-fc-review-rate-card~ was renamed to ~org-fc-review-rate~
** [2020-07-01 Wed]
*** Changed
- The review history file is only written once per review,
  as a first step towards implementing a "undo-rating" command
** [2020-06-29 Mon]
*** Added